--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "format": "prettier \"src/**/*.{js,jsx,ts,tsx,css,md,json}\" --write",
-    "check": "prettier \"src/**/*.{js,jsx,ts,tsx,css,md,json}\" --check"
+    "check": "prettier \"src/**/*.{js,jsx,ts,tsx,css,md,json}\" --check",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -20,9 +22,13 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/vite": "^4.1.17",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/coverage-istanbul": "^4.0.15",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -30,6 +36,7 @@
     "globals": "^16.5.0",
     "prettier": "^3.7.4",
     "tailwindcss": "^4.1.17",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "vitest": "^4.0.15"
   }
 }
