--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format": "prettier \"src/**/*.{js,jsx,ts,tsx,css,md,json}\" --write",
     "check": "prettier \"src/**/*.{js,jsx,ts,tsx,css,md,json}\" --check",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "server": "firebase emulators:start --only functions",
+    "deploy:server": "firebase deploy --only functions"
   },
   "dependencies": {
     "react": "^19.2.0",
